# ducku_cli

./: README.md  action.yml  pyproject.toml
.github/workflows/: docker.yml
config/: documentory_schema.yaml  ducku_schema.yaml
scripts/: build.sh
src/core/: base_usecase.py  configuration.py  project.py  search_pattern.py
src/core/code/languages/: ruby.py
src/helpers/: comparison.py  json.py
src/use_cases/: partial.py  partial_lists.py  pattern_search.py  unused_modules.py
test/unit/core/: test_parallel_entities.py
test/unit/helpers/: comparison.py
test/unit/use_cases/: test_partial.py  test_pattern_search.py  test_unused_modules.py
