[project]
name = "wiki5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.13.0",
    "jsonschema>=4.25.1",
    "markdown-it-py>=4.0.0",
    "marko>=2.2.0",
    "pyyaml",
    "rapidfuzz>=3.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "bin"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
[project.scripts]
documentary = "bin.cli:main"